--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <head>
 <title>Bliss Cloud</title>
   <link rel="icon" type="image/x-icon" href="logo-dark-mode.svg">
+  <link rel="stylesheet" href="/style.css">
+    <script src="/settings.js"></script>
 </head>
 
 <main class="main-content" id="content">
@@ -41,11 +43,14 @@
             <span class="tooltip">AI</span>
             🤖
         </a>
+        <a href="/partners.html" class="nav-item">
+            <span class="tooltip">Partners</span>
+            🤝
+        </a>
          <a href="/settings.html" class="nav-item">
             <span class="tooltip">Settings</span>
             ⚙
         </a>
     </nav>
     
-    <link rel="stylesheet" href="/style.css">
-    <script src="/settings.js"></script>
+    
