--- a/jace/index.html
+++ b/jace/index.html
@@ -1,11 +1,11 @@
-
   <main>
   <h1><b>Welcome to Jace UBG</b></h1>
   <h2>A Bliss Networks Project</h2>
   <h3><a href="az.html">All Games A-Z</a></h3>
   <p>Want to Emulate a game not on the link above?</p>
   <h3><a href="emulated.html">Emulator</a></h3>
-  <p>Game Count: 839</p>
+  <p>Game Count: 839</p> <link rel="stylesheet" href="/style.css">
+    <script src="/settings.js"></script>
 </main>
   <nav class="bottom-nav">
         <a href="/" class="nav-item">
@@ -32,11 +32,14 @@
             <span class="tooltip">AI</span>
             🤖
         </a>
+        <a href="/partners.html" class="nav-item">
+            <span class="tooltip">Partners</span>
+            🤝
+        </a>
          <a href="/settings.html" class="nav-item">
             <span class="tooltip">Settings</span>
             ⚙
         </a>
     </nav>
     
-    <link rel="stylesheet" href="/style.css">
-    <script src="/settings.js"></script>
+   
