--- a/jace/az.html
+++ b/jace/az.html
@@ -3,7 +3,9 @@
         align-self: center;
     }
   </style>
-<body>
+<body><link rel="stylesheet" href="/style.css">
+    <script src="/settings.js"></script>
+
 <main class="main-content">
 <iframe class="resized" src="az-main.html" target="_blank" ></iframe>
 </main>
@@ -32,11 +34,14 @@
             <span class="tooltip">AI</span>
             🤖
         </a>
+        <a href="/partners.html" class="nav-item">
+            <span class="tooltip">Partners</span>
+            🤝
+        </a>
          <a href="/settings.html" class="nav-item">
             <span class="tooltip">Settings</span>
             ⚙
         </a>
     </nav>
     </body>
-    <link rel="stylesheet" href="/style.css">
-    <script src="/settings.js"></script>
+    
