--- a/settings.html
+++ b/settings.html
@@ -159,6 +159,10 @@ versionStatusElement.classList.add(statusClass);
             <span class="tooltip">AI</span>
             🤖
         </a>
+        <a href="/partners.html" class="nav-item">
+            <span class="tooltip">Partners</span>
+            🤝
+        </a>
          <a href="/settings.html" class="nav-item">
             <span class="tooltip">Settings</span>
             ⚙
