--- a/Stream-Star/tv.html
+++ b/Stream-Star/tv.html
@@ -95,7 +95,7 @@
             
             alert(`Submitted:\nLink: ${link}\nNumber 1: ${num1}\nNumber 2: ${num2}`);
         });
-           document.getElementById('tmdbForm').addEventListener('submit', function(event) {
+           document.getElementById('inputForm').addEventListener('submit', function(event) {
             event.preventDefault();
             let tmdbInput = document.getElementById('tmdbId').value;
             let tmdbId = tmdbInput;
