--- a/partners.html
+++ b/partners.html
@@ -68,6 +68,10 @@
             <img src="/logos/Borcelle_1.png" alt="Image 4">
             <div class="label">AJH's Vault</div>
         </a>
+         <a href="https://1346.lol" class="grid-item">
+            <img src="/logos/CHNwAaxH.gif" alt="Image 5">
+            <div class="label">1346.lol</div>
+        </a>
     </div>
     </main>
      <nav class="bottom-nav">
