--- a/partners.html
+++ b/partners.html
@@ -11,7 +11,8 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-          
+            height: 100vh;
+            margin: 0;
         h1 {
             text-align: center;
             margin-bottom: 20px;
