--- a/test.html
+++ b/test.html
@@ -49,14 +49,14 @@
         function goBack() {
             if (historyIndex > 0) {
                 historyIndex--;
-                iframe.src = historyStack[historyIndex];
+                window.history.back();
             }
         }
 
         function goForward() {
             if (historyIndex < historyStack.length - 1) {
-                historyIndex++;
-                iframe.src = historyStack[historyIndex];
+               historyIndex++;
+               window.history.forward();
             }
         }
 
