--- a/test.html
+++ b/test.html
@@ -4,26 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Browser</title>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/settings.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body, html { width: 100%; height: 100%; display: flex; flex-direction: column; }
         #nav { display: flex; padding: 10px; background: #333; color: white; align-items: center; }
-        button { margin: 0 5px; padding: 5px 10px; cursor: pointer; }
+        button { margin: 0 5px; padding: 5px 10px; cursor: pointer; background-color:#111; }
         input { flex-grow: 1; padding: 5px; margin: 0 10px; }
         iframe { flex-grow: 1; width: 100%; border: none; }
+        .go {
+            background-color:white; border-radius:7px; 
+        }
     </style>
 </head>
 <body>
     <div id="nav">
-    <a href="/"><button><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+    <a href="/"><button><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff" class="bi bi-house" viewBox="0 0 16 16">
   <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
 </svg></button></a>
-        <button onclick="reloadPage()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+        <button onclick="reloadPage()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
   <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
 </svg></button>
         <input type="text" id="url" placeholder="Enter URL or search term" onkeydown="handleKey(event)">
-        <button onclick="loadPage()">Go</button>
+        <button class="go" onclick="loadPage()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#000" class="bi bi-arrow-return-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5"/>
+</svg></button>
     </div>
     <iframe id="browser" src="Stream-Star/stream/embed#https://duckduckgo.com" allowfullscreen></iframe>
     
