--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body, html { width: 100%; height: 100%; display: flex; flex-direction: column; }
-        #nav { display: flex; padding: 10px; background: #111; color: white; align-items: center; }
+        #nav { display: flex; padding: 10px; background: #111; color: white; align-items: center;  border-bottom: 1px solid white;}
         button { margin: 0 5px; padding: 5px 10px; cursor: pointer; background-color:#111; }
         input { flex-grow: 1; padding: 5px; margin: 0 10px; border-radius:25px; background-color:#333;}
         iframe { flex-grow: 1; width: 100%; border: none; }
