--- a/Stream-Star/tv.html
+++ b/Stream-Star/tv.html
@@ -97,7 +97,7 @@
             
             let season = document.getElementById('season').value;
             let episode = document.getElementById('episode').value;
-            window.location.href = `stream/long.html?TMDB=${tmdbId}&s=${season}&e=${episode}`;
+            window.location.href = `stream/multi.html?TMDB=${tmdbId}&s=${season}&e=${episode}`;
         });
     </script>
     </main>
