--- a/Stream-Star/stream/long.html
+++ b/Stream-Star/stream/long.html
@@ -1,4 +1,4 @@
-# IMDb Iframe Embed
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -19,6 +19,10 @@
 
   a{
     color: white;
+  }
+  iframe{
+    height:100vh;
+    width=100vw;
   }
         
     </style>
