--- a/Stream-Star/stream/long.html
+++ b/Stream-Star/stream/long.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,7 +21,7 @@
   }
   iframe{
     height:100vh;
-    width=100vw;
+    width:100vw;
   }
         
     </style>
