--- a/Stream-Star/stream/multi.html
+++ b/Stream-Star/stream/multi.html
@@ -7,6 +7,8 @@
     <style>
        @import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;500;600;700&display=swap');
   html{
+   margin:0;
+   padding:0;
     background-color: black;
     color: white;
     cursor: cell;
