--- a/Stream-Star/stream/embed.html
+++ b/Stream-Star/stream/embed.html
@@ -29,10 +29,10 @@
         }
         .powered-by {
             font-size: 16px;
-            color: #555;
+            color: white;
         }
     </style>
-    div class="icon">🚧</div>
+    <div class="icon">🚧</div>
     <div class="loading-text">Loading the content</div>
     <div class="powered-by">Powered by <a href="https://embeddr.rhw.onw">Embeddr</a></div>
         </div>
