--- a/Stream-Star/stream/embed.html
+++ b/Stream-Star/stream/embed.html
@@ -11,6 +11,7 @@
         <div id="main">
           <style>
         body {
+        color:white;
             display: flex;
             flex-direction: column;
             align-items: center;
